<resources>
    <string name="app_name">Raidplan</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export Screenshot</string>

    <string name="set_character">Select a character in the guild you want.</string>
    <string name="setup">Synchronize your Account</string>
    <string name="authorize">Authorize</string>
    <string name="guild">Guild</string>
    <string name="bosses">Bosses</string>
    <string name="pick_boss">Pick a Boss</string>
    <string name="roster">Roster</string>

    <string name="retrieving">Retrieving Data…</string>
    <string name="setting_character">Setting Character…</string>
    <string name="choose_characters">Add Characters to your Roster.</string>

    <string name="longclick_to_add">Hold entry to add or remove from roster.</string>
    <string name="rank_slider">Minimum guildrank to show:</string>

    <string name="nav_guild">Your Guild</string>
    <string name="nav_roster">Build a Roster</string>
    <string name="nav_raid">Raidposition Tool</string>

    <string name="tarragrue">The Tarragrue</string>
    <string name="eye">The Eye of the Jailer</string>
    <string name="nine">The Nine</string>
    <string name="remnant">Remnant of Ner\'zhul</string>
    <string name="soulrender">Soulrender Dormazain</string>
    <string name="painsmith">Painsmith Raznal</string>
    <string name="guardian">Guardian of the First Ones</string>
    <string name="fatescribe">Fatescribe Roh-Kalo</string>
    <string name="kelthuzad">Kel\'Thuzad</string>
    <string name="sylvanas">Sylvanas Windrunner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="char_name">Name</string>
    <string name="key_level">Key</string>

    <string name="tanks">Tanks</string>
    <string name="healer">Healer</string>
    <string name="melee">Melee</string>
    <string name="range">Range</string>

    <string name="phase">Phase</string>
    <string name="p1">Phase 1</string>
    <string name="chains1">Chains 1</string>
    <string name="chains2">Chains 2</string>
    <string name="p2">Phase 2</string>
    <string name="phylactery">Phylactery</string>

    <string name="no_whatsapp">You need to install WhatsApp to use this function.</string>

</resources>